# cog

./: COGBRIDGE_CHANGES.md  COGBRIDGE_README.md  meson.build
cogbridge/: DOCUMENTATION_SUMMARY.txt  EXAMPLES_STREAMLINE_SUMMARY.txt  README.md  cogbridge.c  cogbridge.h  meson.build
cogbridge/docs/: ANSWER.md  BUILD_AND_RUN.md  BUILD_SUCCESS.md  CHANGELOG.md  CLARIFICATION.md  DRM_FRAMEBUFFER_ISSUE.md  DRM_SCALE_FACTOR_ISSUE.md  DRM_SUCCESS.md  DRM_TROUBLESHOOTING.md  DUAL_PLATFORM_GUIDE.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  HEADLESS_VS_GUI.md  OVERVIEW.md  PLATFORM_GUIDE.md  PROJECT_SUMMARY.md  QUICK_PLATFORM_REFERENCE.md  QUICK_REFERENCE.md  README.md  TESTING.md
cogbridge/examples/: Makefile.standalone  README.md  build_examples.sh  dashboard.c  meson.build  minimal.c
core/: meson.build
platform/drm/: cog-drm-modeset-renderer.c
